--- a/migrationToRoom/build.gradle
+++ b/migrationToRoom/build.gradle
@@ -35,4 +35,9 @@ dependencies {
     implementation 'com.android.support:design:26.0.0-beta2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-vector-drawable:26.0.0-beta2'
+
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha3"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha3"
+
+    compile 'com.google.code.gson:gson:2.6.2'
 }
