Added migration to Room example and fixes some issues

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':storingArraylistInRoom', ':migrationtoroom', ':migrationToRoom'
+include ':storingArraylistInRoom', ':migrationtoroom', ':migrationToRoom', ':migratingtoroom'
